--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,26 @@
         <!-- Font Awesome -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 
+        <style type="text/css">
+            /* Sticky footer styles
+            -------------------------------------------------- */
+            html {
+              position: relative;
+              min-height: 100%;
+            }
+            body {
+              margin-bottom: 60px; /* Margin bottom by footer height */
+            }
+            .footer {
+              position: absolute;
+              bottom: 0;
+              width: 100%;
+              height: 60px; /* Set the fixed height of the footer here */
+              line-height: 60px; /* Vertically center the text there */
+              background-color: #f5f5f5;
+            }
+        </style>
+
         <title>Shorty - A simple URL shortner</title>
     </head>
     <body>
@@ -27,7 +47,7 @@
                     <form action="/shorten" id="url-shortner-form">
                       <div class="form-group">
                         <small id="url-help" class="form-text text-muted">Enter an URL to shorten.</small>
-                        <input type="url" name="uri" class="form-control" id="url-input" aria-describedby="url-help" placeholder="http://..." required>
+                        <input type="url" name="uri" class="form-control" id="url-input" aria-describedby="url-help" placeholder="https://..." required>
                         <div class="invalid-feedback">
                             Please provide a valid URL.
                         </div>
@@ -44,6 +64,12 @@
                 </div>
             </div>
         </div>
+
+        <footer class="footer">
+            <div class="container text-right">
+                <a href="https://github.com/stang/go-short" /><i class="fab fa-github"></i></a>
+            </div>
+        </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/clipboard@2.0.0/dist/clipboard.min.js"></script>
